# FactGraph

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  readme.md  requirements.txt  requirements_app.txt  requirements_base.txt
FactGraph-main/frontend/: index.html
FactGraph-main/frontend/src/: main.js
data/processed/answerer/: user_kg_2024-12-31_2025-07-12_2022.txt  user_kg_user087-202805301212.txt  (+2 more)
frontend/: .firebaserc  .gitignore  firebase.json  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.vue  firebase.js  main.js
frontend/src/assets/: service.css
frontend/src/components/: ServicePage.vue
frontend/src/knowledge_graph/: extraction.py
frontend/src/qa/answerer/: pipeline.py
frontend/src/qa/answerer/kg/: search.py
frontend/src/qa/answerer/llm/: gpt.py
frontend/src/qa/answerer/prompts/: character.txt
frontend/src/qa/preliminary_work/: embed_kg_data_csv.py  neo4j-data-extraction.py
frontend/src/qa/tools/: data_utils.py  kg_nl.py
frontend/src/qa/verifier/core/: config.py  dedup.py  embeddings.py
frontend/src/qa/verifier/llm/: client.py
frontend/src/router/: index.js
frontend/src/views/: TaskStatus.vue
frontend/src/web/routers/: __init__.py  answerer.py
frontend/src/web/schemas/: news.py
frontend/src/web/tests/: sample.txt
models/: download_CKIP.py
src/: config.py
src/common/: gadget.py
src/knowledge_graph/: neo4j_loader.py  transformation.py
src/web/: __init__.py  deps.py  init_model.py  main.py  test.py
(+52 files in other folders)
