[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "Firstproject creation."
authors = ["LiamoKarca <karca5103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
